<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/graph"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/recommendation"
            android:icon="@drawable/recommendation"
            android:title="@string/recommendation" />


        <item
            android:id="@+id/gamification"
            android:icon="@drawable/gamification"
            android:title="@string/gamification" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/aboutus"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/item"
            android:title="@string/menu_slideshow" />



        <item
            android:id="@+id/remove"
            android:icon="@drawable/delete"
            android:title="@string/remove" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />



    </group>
</menu>